--- a/.github/workflows/publish_ksapiserver.yml
+++ b/.github/workflows/publish_ksapiserver.yml
@@ -37,5 +37,5 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: baclab/ks-apiserver:${{ github.event.inputs.tags }}
+          tags: beclab/ks-apiserver:${{ github.event.inputs.tags }}
           file: build/ks-apiserver/Dockerfile
