--- a/.github/workflows/publish_ksapiserver.yml
+++ b/.github/workflows/publish_ksapiserver.yml
@@ -27,6 +27,13 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v3
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -39,3 +46,4 @@ jobs:
           push: true
           tags: beclab/ks-apiserver:${{ github.event.inputs.tags }}
           file: build/ks-apiserver/Dockerfile
+          platforms: linux/amd64,linux/arm64
